<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectRouteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/select_route_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/card_horizontal_margin"
                android:layout_marginVertical="@dimen/card_vertical_margin"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_choose_route"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_route"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <Spinner
                    android:id="@+id/sp_choose_route"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:backgroundTint="@color/dark_green"
                    android:prompt="@string/choose_route_prompt"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/route_card"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/card_horizontal_margin"
                android:layout_marginVertical="@dimen/card_vertical_margin"
                android:orientation="vertical">

                    <TextView
                        android:id="@+id/route_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Data from the route"
                        android:layout_marginBottom="@dimen/spacing20"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
                    <TextView
                        android:id="@+id/route_slot"
                        android:layout_below="@id/route_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Day to recover:"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>
                    <TextView
                        android:id="@+id/route_slot_result"
                        android:layout_below="@id/route_title"
                        android:layout_toEndOf="@id/route_slot"
                        android:gravity="end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Undefined" />
                    <TextView
                        android:id="@+id/route_time"
                        android:layout_below="@id/route_slot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time cost:"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>
                    <TextView
                        android:id="@+id/route_time_result"
                        android:layout_below="@id/route_slot"
                        android:layout_toEndOf="@id/route_time"
                        android:gravity="end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Undefined" />
                    <TextView
                        android:id="@+id/route_distance"
                        android:layout_below="@id/route_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Distance cost:"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>
                    <TextView
                        android:id="@+id/route_distance_result"
                        android:layout_below="@id/route_time"
                        android:layout_toEndOf="@id/route_distance"
                        android:gravity="end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Undefined" />
                    <TextView
                        android:id="@+id/route_containers"
                        android:layout_below="@id/route_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Containers to recover:"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>
                    <TextView
                        android:id="@+id/route_containers_result"
                        android:layout_below="@id/route_distance"
                        android:layout_toEndOf="@id/route_containers"
                        android:gravity="end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Undefined" />
                    <TextView
                        android:id="@+id/route_pilot"
                        android:layout_below="@id/route_containers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pilot:"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>
                    <TextView
                        android:id="@+id/route_pilot_result"
                        android:layout_below="@id/route_containers"
                        android:layout_toEndOf="@id/route_pilot"
                        android:gravity="end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Undefined" />

                    <Button
                        android:layout_below="@id/route_pilot"
                        android:id="@+id/start_route"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                        android:text="@string/start_route" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>